Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -1,7 +1,7 @@
 {
   "metas": [
     {
-      "id": "tt31031809",
+      "id": "tt21030032",
       "type": "series",
       "name": "Oshi no Ko Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx166531-dAL5MsqDHUkj.jpg",
@@ -15,7 +15,7 @@
       "description": "Genres: Comedy, Romance, Slice of Life\nTags:School/Heterosexual/Tsundere/Primarily Teen Cast/Language Barrier/Male Protagonist/Female Harem/Female Protagonist/Primarily Female Cast/Otaku Culture/Kuudere/Nudity/Meta\nAlya is a transfer student enjoying popularity at her new high school, often sporting a cold shoulder while earning high marks in class. She ignores her nerdy classmate, Kuze Masachika, except for when she blurts out a flirtatious line to him in Russian. Little does she know, Kuze understands Russian, though he pretends not to. Let’s see where this wacky love story takes them!<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt27305026",
+      "id": "tt12057106",
       "type": "series",
       "name": "Tower of God Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx153406-dU2RLKgMUF2U.jpg",
@@ -64,11 +64,18 @@
       "description": "Genres: Comedy, Romance, Slice of Life\nTags:Heterosexual/Acting/Iyashikei/Episodic/Female Protagonist/Parody/School/School Club/Meta/Male Protagonist/Shounen\nEiji Kitahama joins the drama club with dreams of having a harem like the ones from his favorite manga. Rin Nanakura, an underclassman, finds herself crushing hard on Eiji and tries on different personas in his presence to win him over. No matter how she acts, one thing is certain—her feelings for Eiji continue to grow stronger. Will she ever be able to tell him the truth and be herself?<br><br>\n(Source: Crunchyroll)"
     },
     {
+      "id": "tt32332831",
+      "type": "series",
+      "name": "Makeine: Too Many Losing Heroines!",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx171457-Z8tZRk7LhcZk.jpg",
+      "description": "Genres: Comedy, Romance\nTags:Unrequited Love/Male Protagonist/Primarily Teen Cast/School/Love Triangle/Heterosexual/Satire/School Club/Female Harem/Meta/Tomboy/Tanned Skin/Nudity/Writing\nKazuhiko Nukumizu is a high school boy content to blend in with the background mob, until he witnessed his more popular classmate Anna Yanami get dumped by her childhood friend. He felt like he had to try to comfort Yanami, but this led him to become entangled with other girls who have met defeat at love?"
+    },
+    {
       "id": "tt27187054",
       "type": "series",
       "name": "The Elusive Samurai",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx162896-hSMTVceb50GY.jpg",
-      "description": "Genres: Action, Adventure\nTags:Historical/Samurai/Swordplay/War/Male Protagonist/Surreal Comedy/Fugitive/Primarily Child Cast/Gore/Shounen/Archery/Religion/Primarily Male Cast/CGI/Trains\nIn the year 1333, the Kamakura shogunate government comes crumbling down. A trusted vassal, Ashikaga Takauji, betrays the shogunate and organizes a rebellion. Hojou Tokiyuki, the rightful heir, escapes the massacre with a Shinto priest named Suwa Yorishige to Kamakura. On the run and fighting to stay alive, Tokiyuki sets in motion his plan to reclaim his birthright.<br>\n<br>\n(Source: Crunchyroll)"
+      "description": "Genres: Action, Adventure\nTags:Historical/Samurai/War/Swordplay/Male Protagonist/Surreal Comedy/Primarily Child Cast/Fugitive/Gore/Shounen/Archery/Religion/Primarily Male Cast/CGI/Trains/Revenge\nIn the year 1333, the Kamakura shogunate government comes crumbling down. A trusted vassal, Ashikaga Takauji, betrays the shogunate and organizes a rebellion. Hojou Tokiyuki, the rightful heir, escapes the massacre with a Shinto priest named Suwa Yorishige to Kamakura. On the run and fighting to stay alive, Tokiyuki sets in motion his plan to reclaim his birthright.<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt32469108",
@@ -76,13 +83,6 @@
       "name": "Failure Frame: I Became the Strongest and Annihilated Everything with Low-Level Spells",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx173694-XcwGOMBxboOO.png",
       "description": "Genres: Action, Adventure, Drama, Fantasy\nTags:Revenge/Isekai/CGI/Survival/Bullying/Male Protagonist/Elf/Gore/Gyaru\nTouka always faded into the background at school. And when he’s summoned to another world with his classmates, that still doesn’t change! They all acquire top-rank skills, except Touka, who’s deemed a failure and cast to ancient ruins by the goddess Vicius. Turns out, his low-rank skills may not be so useless after all. Now, he seeks revenge against the goddess, and his true nature is revealed.<br>\n<br>\n(Source: Crunchyroll)"
-    },
-    {
-      "id": "tt32332831",
-      "type": "series",
-      "name": "Makeine: Too Many Losing Heroines!",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx171457-Z8tZRk7LhcZk.jpg",
-      "description": "Genres: Comedy, Romance\nTags:Unrequited Love/Male Protagonist/Primarily Teen Cast/School/Love Triangle/Heterosexual/Satire/School Club/Female Harem/Meta/Tomboy/Tanned Skin/Nudity/Writing\nKazuhiko Nukumizu is a high school boy content to blend in with the background mob, until he witnessed his more popular classmate Anna Yanami get dumped by her childhood friend. He felt like he had to try to comfort Yanami, but this led him to become entangled with other girls who have met defeat at love?"
     },
     {
       "id": "tt15414478",
@@ -124,10 +124,10 @@
       "type": "series",
       "name": "Code Geass: Rozé of the Recapture",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx126830-Mx56p5DMIjiq.png",
-      "description": "Genres: Action, Drama, Mecha, Sci-Fi, Thriller\nTags:Real Robot/Robots/Military/War/Super Power/Male Protagonist/Seinen\nYear Seven of the Kowa Period, in the former Hokkaido Block occupied by the Neo-Britannian Empire, live mercenary brothers known as the Nameless Mercenaries. The eldest, Ash, has excellent athletic ability and advanced Knightmare Frame controlling skills, while the youngest, Rozé, is clearheaded and oversees intel gathering and devising strategies. Due to an impregnable wall of energy called the Situmpe Wall, for four years the 100th emperor who stopped the Black Knights' liberation plan, Callis al Britannia, has been trying to plunge the world into chaos once again with the help of his servant, Norland, and his Einberg Knights. Upon receiving a request, Rozé and Ash, along with the Seven Shining Stars resistance group confront the Empire to recapture Princess Sakuya.<br><br>\n\n(Source: Hulu)<br><br>\n\n<i>Note: The series had a four-part theatrical pre-screening in Japan starting in May 2024. Streaming worldwide release begins in June 2024.<br><br>\n\n• Part 1 releasing theatrically on May 10, 2024.<br>\n• Part 2 releasing theatrically on June 7, 2024.<br>\n• Part 3 releasing theatrically on July 5, 2024.<br>\n• Final Part releasing theatrically on August 2, 2024.\n"
+      "description": "Genres: Action, Drama, Mecha, Sci-Fi, Thriller\nTags:Real Robot/War/Robots/Military/Super Power/Male Protagonist/Seinen\nYear Seven of the Kowa Period, in the former Hokkaido Block occupied by the Neo-Britannian Empire, live mercenary brothers known as the Nameless Mercenaries. The eldest, Ash, has excellent athletic ability and advanced Knightmare Frame controlling skills, while the youngest, Rozé, is clearheaded and oversees intel gathering and devising strategies. Due to an impregnable wall of energy called the Situmpe Wall, for four years the 100th emperor who stopped the Black Knights' liberation plan, Callis al Britannia, has been trying to plunge the world into chaos once again with the help of his servant, Norland, and his Einberg Knights. Upon receiving a request, Rozé and Ash, along with the Seven Shining Stars resistance group confront the Empire to recapture Princess Sakuya.<br><br>\n\n(Source: Hulu)<br><br>\n\n<i>Note: The series had a four-part theatrical pre-screening in Japan starting in May 2024. Streaming worldwide release begins in June 2024.<br><br>\n\n• Part 1 releasing theatrically on May 10, 2024.<br>\n• Part 2 releasing theatrically on June 7, 2024.<br>\n• Part 3 releasing theatrically on July 5, 2024.<br>\n• Final Part releasing theatrically on August 2, 2024.\n"
     },
     {
-      "id": "tt23181418",
+      "id": "tt12331304",
       "type": "series",
       "name": "Our Last Crusade or the Rise of a New World Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx139825-rFlrzdRZmlYK.jpg",
@@ -141,18 +141,18 @@
       "description": "Genres: Action, Adventure, Comedy, Fantasy\nTags:Male Protagonist/Primarily Adult Cast/Magic/Slapstick/Swordplay/Elf/Ojou-sama/Parody/Guns/Achronological Order/Work/Maids/Vampire\n<i>\"Why should it matter how old you are if you want to start something new?\"</i><br><br>\n\nThe strongest guy around, who also happens to be middle-aged, strives to be an adventurer! Everyone seems to think you should pursue your dreams while you're still young, but there's one man who just can't give up. In a world where most people who become adventurers do so in their teens, a guild employee in his thirties, Rick Gladiator, seeks to become an adventurer instead. After receiving unimaginably brutal training from the legendary party renowned as the strongest on the continent, Orichalcum Fist, he ends up with combat abilities worthy of S-rank status despite starting out as an F-rank rookie! <br><br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt22001792",
-      "type": "series",
-      "name": "Kimi ni Todoke: From Me to You Season 3",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx168872-vcpdhVFfPpOn.jpg",
-      "description": "Genres: Comedy, Drama, Romance, Slice of Life\nTags:Shoujo/Coming of Age/Snowscape/Primarily Teen Cast/School/Heterosexual/Female Protagonist/Male Protagonist/Gyaru/Tomboy/Unrequited Love/Chibi\nThe third season of <i>Kimi ni Todoke</i>. <br><br>\n<i>What do you do once you're a couple?</i>\n<br><br>\nAlthough she struggles with her blossoming feelings, Sawako comes to terms with herself and tells Kazehaya how she feels about him. Attracted by Sawako's unnoticed efforts and genuine personality, Kazehaya also candidly makes his feelings known.\nThus, their new relationship begins.<br><br>\n\nTheir first date, their school life together, joy, embarrassment and new struggles — everything is fresh and new as the couple awkwardly and gradually learns more about one another, all while their friends' love stories begin to take shape as well. This bittersweet and poignant story of young people, woven from their romantic feelings and dear friendships, begins once more.<br><br>\n(Source: Netflix Anime)"
-    },
-    {
       "id": "tt31844529",
       "type": "series",
       "name": "Why Does Nobody Remember Me in This World?",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx167419-yesWtncEBD9N.jpg",
       "description": "Genres: Action, Adventure, Fantasy, Sci-Fi\nTags:Demons/Post-Apocalyptic/Swordplay/Guns/Lost Civilization\nIn a world where humans triumphed in a great war, Kai guards sealed crypts containing their enemies. But when “World Rebirth” overwrites history, he’s thrust into an alternate reality where humanity lost the war and he’s been forgotten by everyone he knows. Now, this lost hero must rise to restore the world’s balance!<br>\n<br>\n(Source: Crunchyroll)"
+    },
+    {
+      "id": "tt1745240",
+      "type": "series",
+      "name": "Kimi ni Todoke: From Me to You Season 3",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx168872-vcpdhVFfPpOn.jpg",
+      "description": "Genres: Comedy, Drama, Romance, Slice of Life\nTags:Shoujo/Coming of Age/Snowscape/Primarily Teen Cast/School/Heterosexual/Female Protagonist/Male Protagonist/Gyaru/Tomboy/Unrequited Love/Chibi\nThe third season of <i>Kimi ni Todoke</i>. <br><br>\n<i>What do you do once you're a couple?</i>\n<br><br>\nAlthough she struggles with her blossoming feelings, Sawako comes to terms with herself and tells Kazehaya how she feels about him. Attracted by Sawako's unnoticed efforts and genuine personality, Kazehaya also candidly makes his feelings known.\nThus, their new relationship begins.<br><br>\n\nTheir first date, their school life together, joy, embarrassment and new struggles — everything is fresh and new as the couple awkwardly and gradually learns more about one another, all while their friends' love stories begin to take shape as well. This bittersweet and poignant story of young people, woven from their romantic feelings and dear friendships, begins once more.<br><br>\n(Source: Netflix Anime)"
     },
     {
       "id": "tt30971467",
@@ -292,7 +292,7 @@
       "type": "series",
       "name": "Dungeon People",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx168345-X28k73J6QAtc.jpg",
-      "description": "Genres: Adventure, Comedy, Fantasy\nTags:Dungeon/Cute Girls Doing Cute Things/Swordplay/Iyashikei/Female Protagonist/Kingdom Management\nOn the hunt for her missing father, master thief Clay heads off into an unexplored dungeon—but much to her surprise, the dungeon’s caretaker offers her a job! Thievery hasn’t worked for her thus far, so perhaps this new career path will take her closer to finding her dad. But change is never easy. From interviewing monster guardians to positioning traps to confound would-be explorers, Clay has a lot to learn about what it means to be one of the dungeon people.\n<br><br>\n(Source: HIDIVE)"
+      "description": "Genres: Adventure, Comedy, Fantasy\nTags:Dungeon/Swordplay/Iyashikei/Female Protagonist/Cute Girls Doing Cute Things/Kingdom Management\nOn the hunt for her missing father, master thief Clay heads off into an unexplored dungeon—but much to her surprise, the dungeon’s caretaker offers her a job! Thievery hasn’t worked for her thus far, so perhaps this new career path will take her closer to finding her dad. But change is never easy. From interviewing monster guardians to positioning traps to confound would-be explorers, Clay has a lot to learn about what it means to be one of the dungeon people.\n<br><br>\n(Source: HIDIVE)"
     },
     {
       "id": "tt32645928",
@@ -302,7 +302,14 @@
       "description": "Genres: Fantasy, Mystery, Supernatural\nTags:Vampire/Male Protagonist/Primarily Male Cast/Parenthood/Twins\nHailing from the prestigious noble house of Delico, Dali Delico is an elite member of the Blood Pact Council with a promising future. When the Blood Pact Council, the highest governing body for the Vamps, assigns a special mission to Dali, he flatly refuses it. Having lost patience, Gerhard, Dino, and Henrique, who are also Council members serving the same term as Dali, rush to the house of Delico to persuade him. What they witness there is Dali, taking care of an infant himself… Meanwhile, there has been a series of mysterious murders targeting Vamps. And Dali seems to have a history with Pendulum, an antisocial organization that's thought to be the mastermind behind these murders… This is the record of the nobless oblige scramble of child-rearing by the noble Vamps. Can they find the right balance of their absolute mission and childcare in this magnificent gothic world?!<br><br>\n(Source: Crunchyroll)\n<br><br>\n<i>Note: 'Delico's Nursery' is a completely new work based on Kenichi Suemitsu's 'TRUMP' stage play and serves as a sequel to the 'Grand Guignol' 2017 stage play in the series.</i>"
     },
     {
-      "id": "tt32730305",
+      "id": "kitsu:48807",
+      "type": "series",
+      "name": "Go-toubun no Hanayome *",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177191-m98G4nvARiHy.jpg",
+      "description": "Genres: Comedy, Drama, Romance\nTags:Twins/Marriage/Female Harem/Primarily Female Cast/Heterosexual/Male Protagonist/Ensemble Cast/Shounen\nThe honeymoon of Futaro and the five sisters has been adapted to film under the original idea and complete supervision of Negi Haruba.<br><br>\nOnce again, we present a romantic comedy with 500% cuteness!<br><br>\n(Source: Official 5th Anniversary Project Website, Translated)<br><br>\n<i>Note: Relations are provisional and subject to change.<br>The anime was pre-screened in Japan theatrically for 3 weeks starting on September 20, 2024 before being aired as a TV special.</i>"
+    },
+    {
+      "id": "tt22524872",
       "type": "series",
       "name": "SHY Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx171748-yigmfmsgq6SR.jpg",
