--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -26,14 +26,7 @@
       "type": "series",
       "name": "My Deer Friend Nokotan",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx175977-Pgrtv3p3ROe9.jpg",
-      "description": "Genres: Comedy, Fantasy, Slice of Life\nTags:Surreal Comedy/Animals/Slapstick/School Club/School/Female Protagonist/Satire/Meta/Cute Girls Doing Cute Things/Primarily Female Cast/Urban Fantasy/Tsundere/CGI/Parody/Delinquents/Monster Girl/Shounen/Cosmic Horror/Chibi/Yandere\nKoshi Torako has everyone fooled. Her classmates see her as the perfect honor student, unaware of her secret delinquent past. But her new picturesque school life is thrown into chaos when she bumps into Shikanoko Noko, a girl with antlers! Mayhem seems to follow this strange doe-eyed girl. Who, or what, is she?\n<br><br>\n(Source: Crunchyroll)<br><br>\n<i>Note: Each episode streamed 4 days early on some streaming services. The original TV broadcast started on July 7th, 2024.</i>"
-    },
-    {
-      "id": "tt28279848",
-      "type": "series",
-      "name": "Suicide Squad ISEKAI",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx166710-3G2croXhaCOm.jpg",
-      "description": "Genres: Action, Adventure, Fantasy, Sci-Fi\nTags:Isekai/Anti-Hero/Crime/Magic/Super Power/Female Protagonist/Primarily Adult Cast/Language Barrier/Crossover/Prison/Swordplay/Meta/CGI/Primarily Male Cast/Bisexual\nIn the crime-ridden city of Gotham, Amanda Waller, the head of A.R.G.U.S., has assembled a group of notorious criminals for a mission: Harley Quinn, Deadshot, Peacemaker, Clayface, and King Shark. These Super-Villains are sent into an otherworldly realm that’s connected to this world through a gate. It’s a world of swords and magic where orcs rampage and dragons rule the skies—an “ISEKAI”!<br>\n<br>\nWith lethal explosives planted in their necks, there’s no running or hiding, and failing the mission means a one-way ticket to the afterlife! Can Harley Quinn and her crew conquer this perilous ISEKAI realm?! Brace yourselves for the pulse-pounding saga of the elite task force known as the “Suicide Squad” as they embark on a jaw-dropping adventure!<br>\n<br>\n(Source: Warner Bros. Japan)"
+      "description": "Genres: Comedy, Fantasy, Slice of Life\nTags:Surreal Comedy/Animals/Slapstick/School Club/School/Female Protagonist/Satire/Meta/Cute Girls Doing Cute Things/Primarily Female Cast/Urban Fantasy/Tsundere/CGI/Parody/Delinquents/Monster Girl/Shounen/Cosmic Horror/Chibi/Yandere/LGBTQ+ Themes\nKoshi Torako has everyone fooled. Her classmates see her as the perfect honor student, unaware of her secret delinquent past. But her new picturesque school life is thrown into chaos when she bumps into Shikanoko Noko, a girl with antlers! Mayhem seems to follow this strange doe-eyed girl. Who, or what, is she?\n<br><br>\n(Source: Crunchyroll)<br><br>\n<i>Note: Each episode streamed 4 days early on some streaming services. The original TV broadcast started on July 7th, 2024.</i>"
     },
     {
       "id": "tt31889371",
@@ -41,6 +34,13 @@
       "name": "Wistoria: Wand and Sword",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx174576-tpKcHG0eO6CS.jpg",
       "description": "Genres: Action, Adventure, Comedy, Drama, Fantasy\nTags:Male Protagonist/Swordplay/Magic/School/Primarily Teen Cast/Dungeon/Gore/Bullying/Heterosexual/Urban Fantasy/CGI\nA hard-working boy named Will enters a magic academy in hopes of becoming a great sorcerer. Unfortunately, there's a fatal flaw in his plan: he lacks the ability to use magic. Amid the cold stares of his classmates and instructors, Will feels discouraged at times, but he presses forward with unwavering determination. He can't use a wand, but he can wield a sword in his battle to reach the top of a magic-dominated world. He just needs to believe in his own unique strengths and remember the promise he made with someone precious to him...\n<br><br>\n(Source: Crunchyroll)"
+    },
+    {
+      "id": "tt28279848",
+      "type": "series",
+      "name": "Suicide Squad ISEKAI",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx166710-3G2croXhaCOm.jpg",
+      "description": "Genres: Action, Adventure, Fantasy, Sci-Fi\nTags:Isekai/Anti-Hero/Crime/Magic/Swordplay/Super Power/Female Protagonist/Meta/Crossover/Primarily Adult Cast/Prison/Language Barrier/CGI/Bisexual/Primarily Male Cast/Guns/Dragons\nIn the crime-ridden city of Gotham, Amanda Waller, the head of A.R.G.U.S., has assembled a group of notorious criminals for a mission: Harley Quinn, Deadshot, Peacemaker, Clayface, and King Shark. These Super-Villains are sent into an otherworldly realm that’s connected to this world through a gate. It’s a world of swords and magic where orcs rampage and dragons rule the skies—an “ISEKAI”!<br>\n<br>\nWith lethal explosives planted in their necks, there’s no running or hiding, and failing the mission means a one-way ticket to the afterlife! Can Harley Quinn and her crew conquer this perilous ISEKAI realm?! Brace yourselves for the pulse-pounding saga of the elite task force known as the “Suicide Squad” as they embark on a jaw-dropping adventure!<br>\n<br>\n(Source: Warner Bros. Japan)"
     },
     {
       "id": "tt21975478",
@@ -68,7 +68,7 @@
       "type": "series",
       "name": "The Elusive Samurai",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx162896-hSMTVceb50GY.jpg",
-      "description": "Genres: Action, Adventure\nTags:Historical/Samurai/War/Swordplay/Male Protagonist/Surreal Comedy/Primarily Child Cast/Fugitive/Gore/Shounen/Archery/Religion/Primarily Male Cast/CGI/Trains/Revenge\nIn the year 1333, the Kamakura shogunate government comes crumbling down. A trusted vassal, Ashikaga Takauji, betrays the shogunate and organizes a rebellion. Hojou Tokiyuki, the rightful heir, escapes the massacre with a Shinto priest named Suwa Yorishige to Kamakura. On the run and fighting to stay alive, Tokiyuki sets in motion his plan to reclaim his birthright.<br>\n<br>\n(Source: Crunchyroll)"
+      "description": "Genres: Action, Adventure\nTags:Historical/Samurai/War/Swordplay/Male Protagonist/Surreal Comedy/Primarily Child Cast/Fugitive/Gore/Shounen/Archery/Religion/Primarily Male Cast/Trains/CGI/Revenge\nIn the year 1333, the Kamakura shogunate government comes crumbling down. A trusted vassal, Ashikaga Takauji, betrays the shogunate and organizes a rebellion. Hojou Tokiyuki, the rightful heir, escapes the massacre with a Shinto priest named Suwa Yorishige to Kamakura. On the run and fighting to stay alive, Tokiyuki sets in motion his plan to reclaim his birthright.<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt32552529",
@@ -131,7 +131,7 @@
       "type": "series",
       "name": "Code Geass: Rozé of the Recapture",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx126830-Mx56p5DMIjiq.png",
-      "description": "Genres: Action, Drama, Mecha, Sci-Fi, Thriller\nTags:Real Robot/War/Robots/Military/Super Power/Male Protagonist/Politics/Seinen\nYear Seven of the Kowa Period, in the former Hokkaido Block occupied by the Neo-Britannian Empire, live mercenary brothers known as the Nameless Mercenaries. The eldest, Ash, has excellent athletic ability and advanced Knightmare Frame controlling skills, while the youngest, Rozé, is clearheaded and oversees intel gathering and devising strategies. Due to an impregnable wall of energy called the Situmpe Wall, for four years the 100th emperor who stopped the Black Knights' liberation plan, Callis al Britannia, has been trying to plunge the world into chaos once again with the help of his servant, Norland, and his Einberg Knights. Upon receiving a request, Rozé and Ash, along with the Seven Shining Stars resistance group confront the Empire to recapture Princess Sakuya.<br><br>\n\n(Source: Hulu)<br><br>\n\n<i>Note: The series had a four-part theatrical pre-screening in Japan starting in May 2024. Streaming worldwide release begins in June 2024.<br><br>\n\n• Part 1 releasing theatrically on May 10, 2024.<br>\n• Part 2 releasing theatrically on June 7, 2024.<br>\n• Part 3 releasing theatrically on July 5, 2024.<br>\n• Final Part releasing theatrically on August 2, 2024.\n"
+      "description": "Genres: Action, Drama, Mecha, Sci-Fi, Thriller\nTags:Real Robot/Super Power/War/Robots/Military/Male Protagonist/Politics/Seinen\nYear Seven of the Kowa Period, in the former Hokkaido Block occupied by the Neo-Britannian Empire, live mercenary brothers known as the Nameless Mercenaries. The eldest, Ash, has excellent athletic ability and advanced Knightmare Frame controlling skills, while the youngest, Rozé, is clearheaded and oversees intel gathering and devising strategies. Due to an impregnable wall of energy called the Situmpe Wall, for four years the 100th emperor who stopped the Black Knights' liberation plan, Callis al Britannia, has been trying to plunge the world into chaos once again with the help of his servant, Norland, and his Einberg Knights. Upon receiving a request, Rozé and Ash, along with the Seven Shining Stars resistance group confront the Empire to recapture Princess Sakuya.<br><br>\n\n(Source: Hulu)<br><br>\n\n<i>Note: The series had a four-part theatrical pre-screening in Japan starting in May 2024. Streaming worldwide release begins in June 2024.<br><br>\n\n• Part 1 releasing theatrically on May 10, 2024.<br>\n• Part 2 releasing theatrically on June 7, 2024.<br>\n• Part 3 releasing theatrically on July 5, 2024.<br>\n• Final Part releasing theatrically on August 2, 2024.\n"
     },
     {
       "id": "tt12331304",
@@ -201,7 +201,7 @@
       "type": "series",
       "name": "DEAD DEAD DEMONS DEDEDEDE DESTRUCTION",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/b177697-Gxdbz8IoI3Gd.png",
-      "description": "Genres: Comedy, Drama, Sci-Fi, Slice of Life\nTags:Coming of Age/Urban/Aliens/Philosophy/Dystopian/Politics/Surreal Comedy/Military/Primarily Female Cast/School/Female Protagonist/Seinen/Cute Girls Doing Cute Things/Language Barrier\nAs the world is threatened by the sudden appearance of a mysterious alien mothership, best friends Koyama Kadode and Nakagawa “Ontan” Oran carry on about their high school life. But as they grow up, they face existential questions, learning adulthood’s complexities and that the true threat may not be from above.<br>\n<br>\n(Source: Crunchyroll)<br><br>\n<i>Note: Includes Episode 0.</i>"
+      "description": "Genres: Comedy, Drama, Sci-Fi, Slice of Life\nTags:Coming of Age/Politics/Aliens/Urban/Philosophy/Dystopian/Surreal Comedy/Military/Primarily Female Cast/School/Female Protagonist/Seinen/Cute Girls Doing Cute Things/Language Barrier\nAs the world is threatened by the sudden appearance of a mysterious alien mothership, best friends Koyama Kadode and Nakagawa “Ontan” Oran carry on about their high school life. But as they grow up, they face existential questions, learning adulthood’s complexities and that the true threat may not be from above.<br>\n<br>\n(Source: Crunchyroll)<br><br>\n<i>Note: Includes Episode 0.</i>"
     },
     {
       "id": "tt30236310",
@@ -243,7 +243,7 @@
       "type": "series",
       "name": "MAYONAKA PUNCH",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx174044-HBvsyKjDVPyO.jpg",
-      "description": "Genres: Comedy, Supernatural\nTags:Monster Girl/Female Protagonist/Primarily Female Cast/Vampire/Primarily Adult Cast/Urban Fantasy/Cute Girls Doing Cute Things/Super Power/Surreal Comedy\nMeet Masaki, the now former member of the popular NewTuber group, Harikiri Sisters. After a career setback, aka getting fired unexpectedly via a livestream, she joins forces with Live, a partner with superhuman abilities. Together, they aim to create sensational content and reach 1 million subscribers. Will they reach their content dreams or be hit with the block button?<br><br>\n\n(Source: Crunchyroll)"
+      "description": "Genres: Comedy, Supernatural\nTags:Monster Girl/Female Protagonist/Primarily Female Cast/Vampire/Primarily Adult Cast/Urban Fantasy/Yuri/Cute Girls Doing Cute Things/Super Power/Surreal Comedy\nMeet Masaki, the now former member of the popular NewTuber group, Harikiri Sisters. After a career setback, aka getting fired unexpectedly via a livestream, she joins forces with Live, a partner with superhuman abilities. Together, they aim to create sensational content and reach 1 million subscribers. Will they reach their content dreams or be hit with the block button?<br><br>\n\n(Source: Crunchyroll)"
     },
     {
       "id": "tt23844810",
@@ -348,7 +348,7 @@
       "type": "series",
       "name": "Rick and Morty: The Anime",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx150103-6rlFCeObUPlI.jpg",
-      "description": "Genres: Adventure, Comedy, Sci-Fi\nTags:Male Protagonist\nAn anime adaptation of Rick and Morty. Directed by Takashi Sano (Rick and Morty vs. Genocider, Summer Meets God) at Telecom Animation Film, the anime will be an original work, based on themes and events from the main Rick and Morty animated series. \n<br><br>\n(Source: Anime News Network, edited)\n<br><br>\n<i>Note: The first episode was screened early on June 25th at the 17th International Animated Film Festival ANIMATOR in Poznań, Poland.<i>"
+      "description": "Genres: Adventure, Comedy, Sci-Fi\nTags:Space/Male Protagonist/Virtual World/Video Games/Bisexual/Anthropomorphism\nAn anime adaptation of Rick and Morty. Directed by Takashi Sano (Rick and Morty vs. Genocider, Summer Meets God) at Telecom Animation Film, the anime will be an original work, based on themes and events from the main Rick and Morty animated series. \n<br><br>\n(Source: Anime News Network, edited)\n<br><br>\n<i>Note: The first episode was screened early on June 25th at the 17th International Animated Film Festival ANIMATOR in Poznań, Poland.<i>"
     }
   ]
 }
