Github actions updated anime season data

--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -18,7 +18,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt23951384"
       },
-      "description": "Genres: Music\nTags:Band/Cute Girls Doing Cute Things/Primarily Teen Cast/Iyashikei/Boarding School/Female Protagonist/Religion/Cute Boys Doing Cute Things/Nun/Coming of Age/School/Dancing/School Club\nTotsuko is a high school student with the ability to see the 'colors' of others. Colors of bliss, excitement, and serenity, plus a color she treasures as her favorite. Kimi, a classmate at her school, gives off the most beautiful color of all. Although she doesn’t play an instrument, Totsuko forms a band with Kimi and Rui, a quiet music enthusiast they meet at a used bookstore in a far corner of town. As they practice at an old church on a remote island, music brings them together, forming friendships and stirring affections. Will they discover their true 'colors'?<br>\n<br>\n(Source: GKIDS)"
+      "description": "Genres: Music\nTags:Band/Primarily Teen Cast/Iyashikei/Cute Girls Doing Cute Things/Boarding School/Female Protagonist/Nun/Religion/Cute Boys Doing Cute Things/Coming of Age/School/Dancing/School Club\nTotsuko is a high school student with the ability to see the 'colors' of others. Colors of bliss, excitement, and serenity, plus a color she treasures as her favorite. Kimi, a classmate at her school, gives off the most beautiful color of all. Although she doesn’t play an instrument, Totsuko forms a band with Kimi and Rui, a quiet music enthusiast they meet at a used bookstore in a far corner of town. As they practice at an old church on a remote island, music brings them together, forming friendships and stirring affections. Will they discover their true 'colors'?<br>\n<br>\n(Source: GKIDS)"
     },
     {
       "id": "tt32574149",
@@ -28,7 +28,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt32574149"
       },
-      "description": "Genres: Fantasy, Horror, Mystery, Psychological, Supernatural\nTags:Youkai/Male Protagonist/Primarily Female Cast/Historical\nThe first movie in the <i>Mononoke</i> movie trilogy.<br><br>\n\nAsa and Kame strike up an immediate friendship when they arrive at the same time for their first day of duty at the Ooku, the splendid pleasure palace housing the harem of Lord Tenshi. The two young women are there to join the many hundreds of other maidservants—men are barred from entering, with immediate beheading the price of trespassing. It soon becomes clear that behind the luxurious lifestyle and ritualized routines of the Ooku lie sinister schemes and cynical rivalries. Meanwhile, a mysterious wandering potion-peddler known only as the Medicine Seller subtly insinuates himself into the Ooku, just as an uncanny, otherworldly menace begins to reveal itself.\n<br><br>\n(Source: Fantasia Film Festival)"
+      "description": "Genres: Fantasy, Horror, Mystery, Psychological, Supernatural\nTags:Male Protagonist/Youkai/Historical/Primarily Female Cast\nThe first movie in the <i>Mononoke</i> movie trilogy.<br><br>\n\nAsa and Kame strike up an immediate friendship when they arrive at the same time for their first day of duty at the Ooku, the splendid pleasure palace housing the harem of Lord Tenshi. The two young women are there to join the many hundreds of other maidservants—men are barred from entering, with immediate beheading the price of trespassing. It soon becomes clear that behind the luxurious lifestyle and ritualized routines of the Ooku lie sinister schemes and cynical rivalries. Meanwhile, a mysterious wandering potion-peddler known only as the Medicine Seller subtly insinuates himself into the Ooku, just as an uncanny, otherworldly menace begins to reveal itself.\n<br><br>\n(Source: Fantasia Film Festival)"
     },
     {
       "id": "tt32561659",
@@ -51,14 +51,24 @@
       "description": "Genres: Drama, Music, Romance\nTags:Boys' Love\nSequel to <i>Given: Hiiragi mix</i>."
     },
     {
-      "id": "tt32919667",
+      "id": "tt12792684",
       "type": "movie",
       "name": "Love Live! Nijigasaki Gakuen School Idol Doukoukai: Kanketsu-hen 1",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx166476-2MRsdtwMRZxR.jpg",
       "behaviorHints": {
-        "defaultVideoId": "tt32919667"
+        "defaultVideoId": "tt12792684"
       },
       "description": "Genres: Music, Slice of Life\nTags:Idol/School Club/Primarily Female Cast\nThe first in a trilogy of <i>Love Live! Nijigasaki Gakuen School Idol Doukoukai</i> films that continues the story beyond season two and the OVA."
+    },
+    {
+      "id": "tt1345776",
+      "type": "movie",
+      "name": "Garden of Remembrance",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx151017-8MWy0MiwEiC5.jpg",
+      "behaviorHints": {
+        "defaultVideoId": "tt1345776"
+      },
+      "description": "Genres: Music\nTags:Heterosexual/Primarily Female Cast\nAn untidy room. Empty beer tins, empty wine bottles, a half-empty glass of whisky... A girl is getting up absent-mindedly and starts preparing herself. YOUR morning starts. Lazy and hard-to-wake-up YOU. The emoticon is ME watching over YOU. I play tricks on YOU, while YOU are playing the guitar and drinking. One day, in town, YOU walk past THE CHILDHOOD FRIEND who is buying an Anemone I liked, and remembering that I liked them, YOU rush out to buy them. THE CHILDHOOD FRIEND displays the Anemone with care. One day, years after I died, YOU hear noise from the closet. Opened, YOU see MY garden right in front of YOU. Overflowing emotions of ME and YOU. When exiting from the room with memories, a picture of the Anemone that YOU painted is displayed in YOUR new room.<br>\n<br>\n(Source: Annecy Festival)"
     },
     {
       "id": "tt0856346",
@@ -68,7 +78,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt0856346"
       },
-      "description": "Genres: Fantasy, Slice of Life, Supernatural\nTags:Fairy Tale/Rotoscoping/Female Protagonist/Animals/Ghost/Youkai/Mopeds/Urban Fantasy/Urban/Rural/Gods\nKarin, 11 years old, is abandoned by her father at her grandfather’s house, the monk of a small town in the Japanese countryside. Her grandfather asks Anzu, his jovial and helpful although rather capricious ghost cat, to look after her. The meeting of their strong characters causes sparks, at least at the beginning…"
+      "description": "Genres: Fantasy, Slice of Life, Supernatural\nTags:Mopeds/Urban Fantasy/Urban/Rural/Gods/Fairy Tale/Youkai/Ghost/Animals/Female Protagonist/Rotoscoping\nKarin, 11 years old, is abandoned by her father at her grandfather’s house, the monk of a small town in the Japanese countryside. Her grandfather asks Anzu, his jovial and helpful although rather capricious ghost cat, to look after her. The meeting of their strong characters causes sparks, at least at the beginning…"
     },
     {
       "id": "tt32550189",
@@ -98,7 +108,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt30608459"
       },
-      "description": "Genres: Mahou Shoujo\nTags:Video Games/Henshin/Female Protagonist/Kids/Animals/Primarily Female Cast/Magic\nKomugi, Iroha, Yuki, Mayu, Daifuku and Satoru all got together to play the super popular game \"Dokidoki♡TanuKingdom!\"\n<br>But, as everyone was about to start enjoying the game, a suspicious tanuki somehow dragged them into the world of the game...\n<br>Then there's an even bigger problem! Komugi gets separated from Iroha and all the others...?!\n<br><br>\n\"I <i>aaalways</i> want to stay by Iroha's side-wan!\"\n<br>In order to reunite with her beloved Iroha, Komugi takes on all kinds of games and challenges!\n<br><br>\nWhy in the world did it end up like this...? Just what kind of secret is the game world hiding...?\n<br>The clues are held by the girl who made the game, Natsuki.\n<br><br>\n<i>Hirogaru Sky! Precure </i>and <i>Mahoutsukai Precure!</i> also makes an appearance!\n<br>When everyone's feelings become one, a miracle happens?!\n<br><br>\n(Source: Official website, translated)"
+      "description": "Genres: Mahou Shoujo\nTags:Kids/Female Protagonist/Henshin/Video Games/Animals/Primarily Female Cast/Magic\nKomugi, Iroha, Yuki, Mayu, Daifuku and Satoru all got together to play the super popular game \"Dokidoki♡TanuKingdom!\"\n<br>But, as everyone was about to start enjoying the game, a suspicious tanuki somehow dragged them into the world of the game...\n<br>Then there's an even bigger problem! Komugi gets separated from Iroha and all the others...?!\n<br><br>\n\"I <i>aaalways</i> want to stay by Iroha's side-wan!\"\n<br>In order to reunite with her beloved Iroha, Komugi takes on all kinds of games and challenges!\n<br><br>\nWhy in the world did it end up like this...? Just what kind of secret is the game world hiding...?\n<br>The clues are held by the girl who made the game, Natsuki.\n<br><br>\n<i>Hirogaru Sky! Precure </i>and <i>Mahoutsukai Precure!</i> also makes an appearance!\n<br>When everyone's feelings become one, a miracle happens?!\n<br><br>\n(Source: Official website, translated)"
     },
     {
       "id": "tt31893935",
@@ -108,7 +118,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt31893935"
       },
-      "description": "Genres: Music, Slice of Life\nTags:Primarily Male Cast/VTuber/Idol/Cute Boys Doing Cute Things\nA movie about the VTuber boy band Strawberry Prince."
+      "description": "Genres: Music, Slice of Life\nTags:Idol/Primarily Male Cast/VTuber/Cute Boys Doing Cute Things\nA movie about the VTuber boy band Strawberry Prince."
     },
     {
       "id": "tt30400536",
@@ -128,7 +138,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt32904005"
       },
-      "description": "Genres: Music, Sports\nTags:Idol/Ice Skating/Primarily Male Cast/CGI\nNew KING OF PRISM film reconstructing the events of the Prism Show competition, the PRISM.1, shown during KING OF PRISM -Shiny Seven Stars- with added scenes."
+      "description": "Genres: Music, Sports\nTags:Idol/Primarily Male Cast/CGI/Ice Skating\nNew KING OF PRISM film reconstructing the events of the Prism Show competition, the PRISM.1, shown during KING OF PRISM -Shiny Seven Stars- with added scenes."
     }
   ]
 }
