Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -5,14 +5,14 @@
       "type": "series",
       "name": "Oshi no Ko Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx166531-dAL5MsqDHUkj.jpg",
-      "description": "Genres: Drama, Mystery, Psychological, Supernatural\nTags:Acting/Musical Theater/Revenge/Idol/Twins/Seinen/Male Protagonist/Urban/Drawing/Tsundere/Achronological Order\nThe second season of <i>[Oshi no Ko]</i>.<br><br>\n\nAqua’s desire for revenge takes center stage as he navigates the dark underbelly of the entertainment world alongside his twin sister, Ruby. While Ruby follows in their slain mother’s footsteps to become an idol, Aqua joins a famous theater troupe in hopes of uncovering clues to the identity of his father — the man who arranged their mother’s untimely death, and the man who once starred in the same troupe Aqua hopes to infiltrate.<br><br>\n\n(Source: HIDIVE)"
+      "description": "Genres: Drama, Mystery, Psychological, Supernatural\nTags:Acting/Musical Theater/Revenge/Twins/Idol/Seinen/Male Protagonist/Urban/Drawing/Tsundere/Achronological Order\nThe second season of <i>[Oshi no Ko]</i>.<br><br>\n\nAqua’s desire for revenge takes center stage as he navigates the dark underbelly of the entertainment world alongside his twin sister, Ruby. While Ruby follows in their slain mother’s footsteps to become an idol, Aqua joins a famous theater troupe in hopes of uncovering clues to the identity of his father — the man who arranged their mother’s untimely death, and the man who once starred in the same troupe Aqua hopes to infiltrate.<br><br>\n\n(Source: HIDIVE)"
     },
     {
       "id": "tt31131295",
       "type": "series",
       "name": "Alya Sometimes Hides Her Feelings in Russian",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx162804-TBeptcAfvqTd.jpg",
-      "description": "Genres: Comedy, Romance, Slice of Life\nTags:School/Heterosexual/Tsundere/Primarily Teen Cast/Male Protagonist/Language Barrier/Female Harem/Primarily Female Cast/Female Protagonist/Otaku Culture/Kuudere/Meta\nAlya is a transfer student enjoying popularity at her new high school, often sporting a cold shoulder while earning high marks in class. She ignores her nerdy classmate, Kuze Masachika, except for when she blurts out a flirtatious line to him in Russian. Little does she know, Kuze understands Russian, though he pretends not to. Let’s see where this wacky love story takes them!<br>\n<br>\n(Source: Crunchyroll)"
+      "description": "Genres: Comedy, Romance, Slice of Life\nTags:School/Heterosexual/Tsundere/Primarily Teen Cast/Male Protagonist/Language Barrier/Female Harem/Primarily Female Cast/Female Protagonist/Otaku Culture/Kuudere/Meta/Gyaru\nAlya is a transfer student enjoying popularity at her new high school, often sporting a cold shoulder while earning high marks in class. She ignores her nerdy classmate, Kuze Masachika, except for when she blurts out a flirtatious line to him in Russian. Little does she know, Kuze understands Russian, though he pretends not to. Let’s see where this wacky love story takes them!<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt12057106",
@@ -33,7 +33,7 @@
       "type": "series",
       "name": "Wistoria: Wand and Sword",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx174576-tpKcHG0eO6CS.jpg",
-      "description": "Genres: Action, Adventure, Comedy, Drama, Fantasy\nTags:Male Protagonist/Swordplay/Magic/School/Primarily Teen Cast/Dungeon/Urban Fantasy/Gore/Bullying/Heterosexual/CGI\nA hard-working boy named Will enters a magic academy in hopes of becoming a great sorcerer. Unfortunately, there's a fatal flaw in his plan: he lacks the ability to use magic. Amid the cold stares of his classmates and instructors, Will feels discouraged at times, but he presses forward with unwavering determination. He can't use a wand, but he can wield a sword in his battle to reach the top of a magic-dominated world. He just needs to believe in his own unique strengths and remember the promise he made with someone precious to him...\n<br><br>\n(Source: Crunchyroll)"
+      "description": "Genres: Action, Adventure, Comedy, Drama, Fantasy\nTags:Male Protagonist/Swordplay/Magic/School/Primarily Teen Cast/Dungeon/Urban Fantasy/Gore/Heterosexual/Bullying/CGI\nA hard-working boy named Will enters a magic academy in hopes of becoming a great sorcerer. Unfortunately, there's a fatal flaw in his plan: he lacks the ability to use magic. Amid the cold stares of his classmates and instructors, Will feels discouraged at times, but he presses forward with unwavering determination. He can't use a wand, but he can wield a sword in his battle to reach the top of a magic-dominated world. He just needs to believe in his own unique strengths and remember the promise he made with someone precious to him...\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt28279848",
@@ -134,7 +134,7 @@
       "description": "Genres: Action, Adventure, Fantasy, Sci-Fi\nTags:Demons/Amnesia/Post-Apocalyptic/Swordplay/Guns/Lost Civilization/Elf/Fairy/Angels\nIn a world where humans triumphed in a great war, Kai guards sealed crypts containing their enemies. But when “World Rebirth” overwrites history, he’s thrust into an alternate reality where humanity lost the war and he’s been forgotten by everyone he knows. Now, this lost hero must rise to restore the world’s balance!<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt13592980",
+      "id": "tt0994314",
       "type": "series",
       "name": "Code Geass: Rozé of the Recapture",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx126830-Mx56p5DMIjiq.png",
@@ -229,10 +229,10 @@
       "type": "series",
       "name": "Love Is Indivisible by Twins",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx167144-tKDxH7M9z1Hb.png",
-      "description": "Genres: Romance\nTags:Love Triangle/Twins/Heterosexual/Male Protagonist/Primarily Teen Cast/Female Protagonist/Tomboy/Otaku Culture\nJun Shirasaki’s love life takes a wild turn when he finds himself caught between the Jinguji twins—his childhood friends who are as different as night and day. Rumi, the older sister, pairs a boyish charm with a maiden’s heart, while Naori combines girlish looks with her deep love for otaku culture. As feelings grow and confusion mounts, Jun must navigate this unexpected love triangle next door.<br><br>\n\n(Source: Crunchyroll)"
+      "description": "Genres: Romance\nTags:Love Triangle/Twins/Heterosexual/Otaku Culture/Male Protagonist/Primarily Teen Cast/Female Protagonist/Tomboy/Gyaru\nJun Shirasaki’s love life takes a wild turn when he finds himself caught between the Jinguji twins—his childhood friends who are as different as night and day. Rumi, the older sister, pairs a boyish charm with a maiden’s heart, while Naori combines girlish looks with her deep love for otaku culture. As feelings grow and confusion mounts, Jun must navigate this unexpected love triangle next door.<br><br>\n\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt32332992",
+      "id": "tt21844614",
       "type": "series",
       "name": "A Nobody's Way Up to an Exploration Hero",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx172416-RvQq9bWUxUWt.jpg",
@@ -253,7 +253,7 @@
       "description": "Genres: Action, Adventure, Fantasy\nTags:Swordplay/Kemonomimi/Female Protagonist\nBelle Lablac doesn’t really fit in as the only human being in a world full of anthropomorphic animals. No fangs, no fur, no scales, no claws. Lonely and eager to discover where she comes from, Belle journeys to find answers to the questions of her heart. Carrying nothing but her giant sword, the Runding, she faces a world of possibilities and pitfalls in hopes of discovering the truth.<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt32332642",
+      "id": "tt2595472",
       "type": "series",
       "name": "My Wife Has No Emotion",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx175450-Wfjd6OqFOn2h.jpg",
